# Nekogram

./: build.gradle  changelog.md  gradle.properties  update.json
.github/workflows/: build.yml  release.yml
TMessagesProj/: build.gradle  proguard-rules.pro
TMessagesProj/jni/: TgNetWrapper.cpp
TMessagesProj/jni/colorado/: CMakeLists.txt  colorado.cpp
TMessagesProj/jni/tgnet/: ConnectionsManager.cpp  ProxyCheckInfo.cpp  Timer.cpp
TMessagesProj/src/main/: AndroidManifest.xml
TMessagesProj/src/main/res/values/: strings.xml  (+1 more)
TMessagesProj/src/main/res/values-af/: strings_neko.xml
TMessagesProj/src/main/res/values-ar/: strings_neko.xml
TMessagesProj/src/main/res/values-b+zh+Dg/: strings_neko.xml
TMessagesProj/src/main/res/values-be/: strings_neko.xml
TMessagesProj/src/main/res/values-ca/: strings_neko.xml
TMessagesProj/src/main/res/values-cs/: strings_neko.xml
TMessagesProj/src/main/res/values-da/: strings_neko.xml
TMessagesProj/src/main/res/values-de/: strings_neko.xml
TMessagesProj/src/main/res/values-el/: strings_neko.xml
TMessagesProj/src/main/res/values-eo/: strings_neko.xml
TMessagesProj/src/main/res/values-es/: strings_neko.xml
TMessagesProj/src/main/res/values-fa/: strings_neko.xml
TMessagesProj/src/main/res/values-fi/: strings_neko.xml
TMessagesProj/src/main/res/values-fr/: strings_neko.xml
TMessagesProj/src/main/res/values-he/: strings_neko.xml
TMessagesProj/src/main/res/values-hi/: strings_neko.xml
TMessagesProj/src/main/res/values-hu/: strings_neko.xml
TMessagesProj_App/: build.gradle
buildSrc/: build.gradle.kts
(+75 files in other folders)
